--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
 
 
    <div class="hshoth">
-     <h1>   The Right Places to Go for Your Next Adventure </h1>
+     <h1> ACCESS EPIC ADVENTURES </h1>
 
-   <h4> Get the free newsletter and receive all the hand-picked places and experiences, delivered right to your inbox  </h4>
+   <h4> Get the free newsletter and receive all the hand-picked places and experiences for better prices, delivered right to your inbox  </h4>
    <a href="http://eepurl.com/hhA2A" class="myButton">SUBSCRIBE NOW</a>
    
    <p> Your email address will never be shared or sold to anyone. We hate spam as much as you do.   </p>
