--- a/app/views/pages/thank_you.html.erb
+++ b/app/views/pages/thank_you.html.erb
@@ -20,7 +20,12 @@ var google_conversion_value = 0;
 </noscript>
 
 
+<div class="tripshow">
+
+<h3> Thanks for your inquiry.
+You will be informed about the availability within 24 hours.
+
+You can check out  <%= link_to "FAQ", faq_path %> section if you have more questions. </h3>
 
 
-<h2> Thank You! Your message has been sent. Will get back to you with prices and availability. </h2>
-
+</div>
