--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -26,7 +26,7 @@ $lightGray: #999;
 
 
 .nav-pills a:hover {  
-  background:none;
+  
   text-decoration:underline;
 }
 
@@ -80,80 +80,7 @@ $lightGray: #999;
 	font-weight: bold;		
 }
 
-.carousel-caption2 {
-    background: none;   	
-	font-size: 24px;		
-	position: absolute;
-    left: 65px;
-    right: 0;
-    bottom: 0;
-    top: 260px;
-    padding: 10px 15px 5px;	
-}
 
-.carousel-caption2 a {
-		
-	font-size:26px; 
-	background: #000;
-	padding: 5px;	
-	
-}
-
-.carousel-inner {
-	
-	height:415px;
-}
-
-#myCarousel {
-	
-	margin-bottom: 0px;
-	
-	  	
-}
-
-#myCarousel a {
-	
-	color: #ff549b;
-	
-}
-
-.carousel-control2{
-	
-   position: absolute;
-   top: 40%;
-   left: 0px;
-   width: 100%;
-   height: 100%;
-   margin-top: -10px;
-      		
-}
-
-
-
-.carousel-control2.left {	
-	background:url(left22.png) no-repeat ;
-	height:59px;
-	width:59px;
-	left:-12px; 
-	
-	
-}
-
-.carousel-control2.left:hover{
-	background:url(left22.png) no-repeat ;
-	
-}
-.carousel-control2.right {		
-    left:auto;
-    right:-12px;
-	background:url(right22.png) no-repeat ;	
-    height:59px;
-	width:59px;
-}
-
-.carousel-control2.right:hover {
-	background:url(right22.png) no-repeat ;	
-}
 
 .listed {	
    cursor:pointer;
@@ -193,10 +120,8 @@ $lightGray: #999;
 
 
 .container a:hover {
-	
-	text-decoration: underline;
-    background: none;
-    color: $grayDarker;
+		
+    
 	
 }
 
@@ -497,9 +422,17 @@ input, textarea, select, .uneditable-input {
 
 }
 
+#myModal {
+	
+	width: 500px;
+	
+}
+
 .modal-body {
 	
-	background: url(txt1.jpg);
+	background: url(1s.jpg);
+	text-shadow: 1px 1px 3px #000,2px 3px 5px #222,-1px -1px 2px #333;
+	text-align: center;
 	
 }
 
@@ -741,4 +674,15 @@ input, textarea, select, .uneditable-input {
         top:1px;
     }
 
+
+.sidescribe {
+	
+	background:url(imm.png);
+	padding: 15px;
+	text-align: center;
+	color: #fff;
+	 text-shadow: 1px 1px 3px #000,2px 3px 5px #222,-1px -1px 2px #333;
+	text-transform:uppercase;
+	
+}
 
