--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   <div class="span7">
   <small>
    <p> &copy; 2013. All About Trips That Will Make You Feel Alive. </p>
-   <p>  <%= link_to "Privacy Policy", '#' %> |  <%= link_to "Terms of Service", '#' %>   </p> 
+   <p>  <%= link_to "Privacy Policy", '#' %> |  <%= link_to "Terms of Service", '#' %> | <%= link_to "FAQ", faq_path %>  </p> 
     
     <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:15px; " allowtransparency="true"></iframe>    
   </small>     
