--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,74 +2,121 @@
 
 
 <form class="form-horizontal">
+          
+          <div class="tripshow">
+          
+          <div class="alert alert-error">
+     <%= @message.errors.full_messages.inspect %>
+ </div>
+          
+          
           <fieldset>
  	  
  	  
  	  
- 	<%= form_for([@trip, @trip.messages.build]) do |f| %>
- 
+ 	<%= form_for([@trip, @trip.messages.build]) do |f| %> 
+              
+              <form class="form-horizontal">
+          <fieldset>
+ 	        
+  
+  <h2> <%= @trip.title %> Reservation </h2>
+  
+  <br> </br>
+  
   
  
-  <div class="control-group">  	
+  <div class="control-group">
     <div class="controls">
-    <%= f.text_field :name, :class => "span3", :placeholder => "Name:" %>
-     <%= f.text_field :email, :class => "span3", :placeholder => "Email:" %>
+    <p> <strong>	What's your name ? </strong> </p>
+    <%= f.text_field :name, :class => "span3" %>
+    <p> <strong>	What's your e-mail ? </strong> </p>
+    <%= f.text_field :email, :class => "span3", :placeholder => "Email:" %>
   </div>
  </div>
+    
+  
+  <div class="control-group">
+    <div class="controls">      
+     	<p> <strong>	Phone #: </strong> </p>  
+     <%= f.text_field :adult, :class => "span3" %>
+      </div>
+  </div>
+  
+  
+  
+  <div class="h"> 
+  <div class="control-group">
+    <div class="controls">
      
-  
-  <div class="control-group">
-    <div class="controls">
-      <div class="h"> 
      <%= f.text_field :subject, :class => "h", :value => (@trip.title) %>
-      </div>
+    </div>
   </div>
  </div> 
   
   <div class="control-group">
     <div class="controls">
-     <%= f.text_area :body, :class => "input-xlarge3", :placeholder => "Message:", :id => "textarea", :rows => "3" %>
+    	<p> <strong>	When are you going ? </strong> </p>     
+    <%= f.text_field :startdate, :class => "span3", :placeholder => "Startdate:" %>
+      </div>
+  </div>
+  
+  <div class="control-group">
+    <div class="controls">      
+    <%= f.text_field :enddate, :class => "span3", :placeholder => "Enddate:" %>
+      </div>
+  </div>
+  
+  <div class="control-group">
+    <div class="controls">      
+     	<p> <strong>	How many people? </strong> </p>  
+     <%= f.text_field :adult, :class => "span3", :placeholder => "Adults:1" %>
+      </div>
+  </div>
+ 
+  <div class="control-group">
+    <div class="controls">      
+     
+  <p> <strong>   Where are you coming from ? </strong> </p>  
+     
+     <%= f.text_field :children, :class => "span3", :placeholder => "Children:0" %>
+      </div>
+  </div>
+  
+  <p> <strong>  What packages and services you need?  </strong> </p> 
+ 
+  
+  <div class="control-group">
+    <div class="controls">
+     <%= f.text_area :body, :class => "span3", :placeholder => "Message:", :id => "textarea", :rows => "3", :rel => "popover", :data => "Ask for availibility "  %>
   </div>
  </div> 
-  
-  <div class="control-group">
-    <div class="controls">     
-     <%= f.text_field :startdate, :placeholder => "Startdate:" %>
-      </div>
-  </div>
-  
-  <div class="control-group">
-    <div class="controls">      
-     <%= f.text_field :enddate, :placeholder => "enddate:" %>
-      </div>
-  </div>
-  
-  <div class="control-group">
-    <div class="controls">      
-     <%= f.text_field :adult, :placeholder => "adults:" %>
-      </div>
-  </div>
+
+<h3> Important to Note: </h3>
  
-  <div class="control-group">
-    <div class="controls">      
-     <%= f.text_field :children, :placeholder => "children:" %>
-      </div>
-  </div>
- 
+  <% for lesson in @trip.lessons %>
+                 <ul>
+                  <li>  <small> <%= lesson.name %> </small>  </li>
+                  
+                 </ul>
+                <% end %>
+  
+      <label class="checkbox">
+        <input type="checkbox"> Inform me about new trips
+      </label>
+  
  <div class="control-group">
  	<div class="controls">    
-   <%= f.submit :class => " btn btn-primary btn-large ", :value => "Send Message" %>
+   <%= f.submit :class => " btn btn-primary btn-large ", :value => "Reserve Now" %>
     </div>
  </div>
   
 <% end %>
 
-  <div class="control-group">
- 	<div class="controls">    
-    <%= link_to "Visit Website", (@trip.url) %>
-    </div>
- </div>
+
 
 </div>
   </fieldset>
  </form> 
+
+
