--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -95,7 +95,7 @@
    <%= link_to 'New Trip', new_trip_path %>
    <% end %> 
   	
-
+<a class="book_button" data-toggle="modal" href="#myModal" >BOOK NOW </a> 
   
 <script type="text/javascript">
     $(window).load(function(){
@@ -113,62 +113,18 @@
         });
 </script>
 
+
+
+
 <div class="modal hide fade" id="myModal">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
-    <h3>Hi there!</h3>
+    <h3>Hey there!</h3>
   </div>
   <div class="modal-body">
-  <!-- Begin MailChimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	
-	#mc_embed_signup input.email {
-display: block;
-padding: 6px 0;
-margin: 0 4% 15px 0;
-text-indent: 5px;
-width: 58%;
-min-width: 268px;
-margin-left: 0px;
-line-height: 14px;
-border-radius: 3px;
-margin-top: 10px;
-}
-		
-#mc_embed_signup label {
-display: block;
-font-size: 26px;
-padding-bottom: 5px;
-margin-top: 30px;
-margin-right: 10px;
-line-height:110%;
-color:#3b3b3b;
-
-}	
-
-
-#mc_embed_signup input.button {
-
-margin-top: 10px;	
-	
-}
-
-
-	
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<label for="mce-EMAIL">Thrill Engine is Here to Let You Know Where to Go for Adventures That Matter. Sign up for the Newsletter!</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
+  <h1> GET CURATED ADVENTURES RIGHT IN YOUR INBOX </h1>
+ 
+<a href="http://eepurl.com/hhA2A" class="btn btn-large btn-block btn-primary" type="button"> Subscribe For the Free Newsletter  </a>
 
   </div>
   
