--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -55,6 +55,7 @@
          <h6> <small> *No hidden costs, no booking fees* </small> </h6>
          
             
+            <h4> Available for Limited Time  </h4>
         
  </div>
  
