--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -353,7 +353,7 @@ input, textarea, select, .uneditable-input {
 	float:right;
 	margin-right: 0px;
 	
-	
+	text-align:center;
 	
 	font-size:16px;
 	font-weight: bold;
