--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -271,7 +271,7 @@
     <h3>Hey there!</h3>
   </div>
   <div class="modal-body">
-  <h1> GET CURATED ADVENTURES RIGHT IN YOUR INBOX </h1>
+  <h1> ACCESS CURATED ADVENTURES FOR BETTER PRICES </h1>
  
 <a href="http://eepurl.com/hhA2A" class="btn btn-large btn-block btn-primary" type="button"> Subscribe For the Free Newsletter  </a>
 
