--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,7 +11,11 @@
           <fieldset>
  	        
   
-  <h2> Reservation </h2> <%= image_tag("paypal.png", :alt => "paypal") %>
+  <h2> Reservation </h2> 
+  
+ <p>  After you make your inquiry, you will be informed about the availability. If everything is alright, you'll get an invoice to secure your reservation and you can pay using paypal. </p>
+  
+  <%= image_tag("paypal.png", :alt => "paypal") %>
   ----------------------------------------------------------------------------
   
   <br> </br>
